--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "material-icons": "^1.13.12",
     "openai": "^4.72.0",
     "pinia": "^2.2.6",
+    "uuid": "^11.0.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
