--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     }
   },
   "dependencies": {
+    "highlight.js": "^11.10.0",
+    "marked": "^15.0.0",
+    "marked-highlight": "^2.2.1",
     "material-icons": "^1.13.12",
     "openai": "^4.72.0",
     "pinia": "^2.2.6",
