--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     }
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "highlight.js": "^11.10.0",
     "marked": "^15.0.0",
     "marked-highlight": "^2.2.1",
