--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "marked": "^15.0.0",
     "marked-highlight": "^2.2.1",
     "material-icons": "^1.13.12",
+    "ollama": "^0.5.10",
     "openai": "^4.72.0",
     "pinia": "^2.2.6",
     "uuid": "^11.0.3",
