--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "multer": "1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
